Attempt to fix overflow issues

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* Define basic properties of the page */
-html, body {
+/* html, body {
   overflow-x: hidden !important;
-}
+} */
 
 body {
-  /* max-width: 100%;
-  height: 100%;
-  overflow-x: hidden !important; */
+  max-width: 100%;
+  /* height: 100%; */
+  overflow-x: hidden !important;
   margin: 0;
   font-family: "Raleway", sans-serif;
   color: #fff;
